--- a/package.json
+++ b/package.json
@@ -32,11 +32,16 @@
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
+
+  "homepage":{"https://macthien314.github.io/Blogging-Web-ReactJs/"},
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
